force-app/main/default/objects/SSP_Member__c/fields/IsToBeReferredToWicToggle__c.field-meta.xml
<CustomField>
    <fullName>IsToBeReferredToWicToggle__c</fullName>
    <description>This field is used to determine if an individual is a referral for WIC</description>
    <label>Is To be Referred to WIC ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>