force-app/main/default/objects/SSP_Member__c/fields/IsUSCitizenToggle__c.field-meta.xml
<CustomField>
    <fullName>IsUSCitizenToggle__c</fullName>
    <description>This field is used to store if individual is US citizen or no.</description>
    <label>Is US Citizen ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>