force-app/main/default/objects/SSP_Member__c/fields/IsVerifiedLawfulPresence__c.field-meta.xml
<CustomField>
    <fullName>IsVerifiedLawfulPresence__c</fullName>
    <description>This field is used to indicate whether lawful presence is verified from VLP interface call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Is Verfied Lawful Presence ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>