force-app/main/default/objects/SSP_Member__c/fields/IsWaitingForDecisionToggle__c.field-meta.xml
<CustomField>
    <fullName>IsWaitingForDecisionToggle__c</fullName>
    <description>This field is used to store if individual is waiting for decision on charges.</description>
    <label>Waiting for Decision?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>