force-app/main/default/objects/SSP_Member__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>This field is used to store Lastname of a member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>