force-app/main/default/objects/SSP_Member__c/fields/LaTypeCode__c.field-meta.xml
<CustomField>
    <fullName>LaTypeCode__c</fullName>
    <description>This field is used to store the current Living Situation for a member</description>
    <label>Current Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>LaTypeCode</valueSetName>
        
        </valueSet>
</CustomField>