force-app/main/default/objects/SSP_Member__c/fields/LifeTimeQuarterQuantity__c.field-meta.xml
<CustomField>
    <fullName>LifeTimeQuarterQuantity__c</fullName>
    <description>This field is used to store Lifetime Quarter Quantity</description>
    <label>LifeTimeQuarterQuantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>