force-app/main/default/objects/SSP_Member__c/fields/MaidCardNumber__c.field-meta.xml
<CustomField>
    <fullName>MaidCardNumber__c</fullName>
    <description>This field is used to store MaidCardNumber returned from reverse SSPDC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MaidCardNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>