force-app/main/default/objects/SSP_Member__c/fields/MailingAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressLine1__c</fullName>
    <description>This field is used to store Address Line 1 value of Mailing Address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>