force-app/main/default/objects/SSP_Member__c/fields/MailingAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressLine2__c</fullName>
    <description>This field is used to store Address Line 2 value of Mailing Address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>