force-app/main/default/objects/SSP_Member__c/fields/MailingAddrValidated__c.field-meta.xml
<CustomField>
    <fullName>MailingAddrValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the mailing address of member is validated</description>
    <label>Mailing Address Validated</label>
    <type>Checkbox</type>
</CustomField>