force-app/main/default/objects/SSP_Member__c/fields/MailingCertifiedNoStatIndicator__c.field-meta.xml
<CustomField>
    <fullName>MailingCertifiedNoStatIndicator__c</fullName>
    <description>Used to store the cass_no_stat_ind value in Address Verification Service for Mailing Address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Certified Stat Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>