force-app/main/default/objects/SSP_Member__c/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <description>This field is used to store city for a Mailing address of a member</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>