force-app/main/default/objects/SSP_Member__c/fields/MailingCotVacancyIndicator__c.field-meta.xml
<CustomField>
    <fullName>MailingCotVacancyIndicator__c</fullName>
    <description>Used to store the cass_vac_ind value in Address Verification Service for Mailing Address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Vacancy Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>