force-app/main/default/objects/SSP_Member__c/fields/MailingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>MailingCountryCode__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCountry</valueSetName>
        
        </valueSet>
</CustomField>