force-app/main/default/objects/SSP_Member__c/fields/MailingCountyCode__c.field-meta.xml
<CustomField>
    <fullName>MailingCountyCode__c</fullName>
    <description>This field is used to store county for a Mailing address of a member</description>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCounty</valueSetName>
        
        </valueSet>
</CustomField>