force-app/main/default/objects/SSP_Member__c/fields/MailingGeolocation__c.field-meta.xml
<CustomField>
    <fullName>MailingGeolocation__c</fullName>
    <description>geo location for mailing address</description>
    <label>Mailing Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>