force-app/main/default/objects/SSP_Member__c/fields/MailingMailAddrDeliveryCode__c.field-meta.xml
<CustomField>
    <fullName>MailingMailAddrDeliveryCode__c</fullName>
    <description>Used to store the cot_mail_delivery_code value in Address Verification Service for Mailing Address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Mail Delivery Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>