force-app/main/default/objects/SSP_Member__c/fields/MailingResidentialDeliveryIndicator__c.field-meta.xml
<CustomField>
    <fullName>MailingResidentialDeliveryIndicator__c</fullName>
    <description>Used to store the cass_rdi_ind value in Address Verification Service for mailing Address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Delivery Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>