force-app/main/default/objects/SSP_Member__c/fields/MailingStateCode__c.field-meta.xml
<CustomField>
    <fullName>MailingStateCode__c</fullName>
    <description>This field is used to store mailing state code for mailing address on a member</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPState</valueSetName>
        
        </valueSet>
</CustomField>