force-app/main/default/objects/SSP_Member__c/fields/MailingZipCode4__c.field-meta.xml
<CustomField>
    <fullName>MailingZipCode4__c</fullName>
    <description>This field is used to store 4 digit Mailing Zip code</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Zip Code(Four Digit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>