force-app/main/default/objects/SSP_Member__c/fields/MatchType__c.field-meta.xml
<CustomField>
    <fullName>MatchType__c</fullName>
    <description>Match Type value stored from  MCI Merged Call Request</description>
    <label>Match Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>No Match</fullName>
                
                
                    <label>No Match</label>
                
                </value>
            
                <value>
                
                    <fullName>Partial Match</fullName>
                
                
                    <label>Partial Match</label>
                
                </value>
            
                <value>
                
                    <fullName>Full Match</fullName>
                
                
                    <label>Full Match</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>