force-app/main/default/objects/SSP_Member__c/fields/MCIId__c.field-meta.xml
<CustomField>
    <fullName>MCIId__c</fullName>
    <description>This field is used to store MCI id from interface call</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>MCIId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>