force-app/main/default/objects/SSP_Member__c/fields/MiddleInitial__c.field-meta.xml
<CustomField>
    <fullName>MiddleInitial__c</fullName>
    <description>This field is used to store Middle Initial of a member</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>MiddleInitial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>