force-app/main/default/objects/SSP_Member__c/fields/NationalityCode__c.field-meta.xml
<CustomField>
    <fullName>NationalityCode__c</fullName>
    <description>This field is used to store Nationality code of a member</description>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Nationality</valueSetName>
        
        </valueSet>
</CustomField>