force-app/main/default/objects/SSP_Member__c/fields/NaturalizationNumber__c.field-meta.xml
<CustomField>
    <fullName>NaturalizationNumber__c</fullName>
    <description>This field is used to store Naturalization Number on a member</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Naturalization Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>