force-app/main/default/objects/SSP_Member__c/fields/Non_Citizen_Verification_Flag__c.field-meta.xml
<CustomField>
    <fullName>Non_Citizen_Verification_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks when RIDP or Identity Document upload is successful</description>
    <label>Non Citizen Verification Flag</label>
    <type>Checkbox</type>
</CustomField>