force-app/main/default/objects/SSP_Member__c/fields/NonCitizenClassOfAdmissionCode__c.field-meta.xml
<CustomField>
    <fullName>NonCitizenClassOfAdmissionCode__c</fullName>
    <description>This field is used to store Non Citizen Class of Admission Code from VLP interface call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Non Citizen Class of Admission Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>