force-app/main/default/objects/SSP_Member__c/fields/NonCitizenEntryDate__c.field-meta.xml
<CustomField>
    <fullName>NonCitizenEntryDate__c</fullName>
    <description>This field is used to store Non Citizen Entry Date from VLP interface call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Non Citizen Entry date</label>
    <type>DateTime</type>
</CustomField>