force-app/main/default/objects/SSP_Member__c/fields/NoReasonSSNCode__c.field-meta.xml
<CustomField>
    <fullName>NoReasonSSNCode__c</fullName>
    <description>This field is used to store the reason for which member does not have SSN</description>
    <label>Why doesn’t have an SSN ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>ReasonForNoSSN</valueSetName>
        
        </valueSet>
</CustomField>