force-app/main/default/objects/SSP_Member__c/fields/NumberOfBirthsExpected__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBirthsExpected__c</fullName>
    <description>This field is used to store the number of births expected for a member</description>
    <label>Number of Births Expected</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>NumberOfBirthsExpected</valueSetName>
        
        </valueSet>
</CustomField>