force-app/main/default/objects/SSP_Member__c/fields/OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate a related institution of organization type on a member</description>
    <label>Organization/Provider Name</label>
    <referenceTo>SSP_Institution__c</referenceTo>
    <relationshipLabel>SSP Members (Organization/Provider Name)</relationshipLabel>
    <relationshipName>SSP_Member</relationshipName>
    <type>Lookup</type>
</CustomField>