force-app/main/default/objects/SSP_Member__c/fields/ParentUnableToCareForChildToggle__c.field-meta.xml
<CustomField>
    <fullName>ParentUnableToCareForChildToggle__c</fullName>
    <description>This field is used to store if individual is unable to take care of child</description>
    <label>Unable to care for Child?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>