force-app/main/default/objects/SSP_Member__c/fields/PassportNumber__c.field-meta.xml
<CustomField>
    <fullName>PassportNumber__c</fullName>
    <description>This field is used to store Passport number of a member</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Passport Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>