force-app/main/default/objects/SSP_Member__c/fields/PhysicalAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>PhysicalAddressLine1__c</fullName>
    <description>This field is used to store Address Line 1 value of Physical Address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>