force-app/main/default/objects/SSP_Member__c/fields/PhysicalAddrValidated__c.field-meta.xml
<CustomField>
    <fullName>PhysicalAddrValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether a member physical address is validated</description>
    <label>Physical Address Validated</label>
    <type>Checkbox</type>
</CustomField>