force-app/main/default/objects/SSP_Member__c/fields/PhysicalCertifiedNoStatIndicator__c.field-meta.xml
<CustomField>
    <fullName>PhysicalCertifiedNoStatIndicator__c</fullName>
    <description>Used to store the cass_no_stat_ind value in Address Verification Service for Physical Address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Physical Certified Stat Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>