force-app/main/default/objects/SSP_Member__c/fields/PhysicalCotVacancyIndicator__c.field-meta.xml
<CustomField>
    <fullName>PhysicalCotVacancyIndicator__c</fullName>
    <description>This field is used to store Physical vacancy Indicator</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Physical Vacancy Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>