force-app/main/default/objects/SSP_Member__c/fields/PhysicalCountryCode__c.field-meta.xml
<CustomField>
    <fullName>PhysicalCountryCode__c</fullName>
    <description>This field is used to store country for a Physical address of a member</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCountry</valueSetName>
        
        </valueSet>
</CustomField>