force-app/main/default/objects/SSP_Member__c/fields/PhysicalGeolocation__c.field-meta.xml
<CustomField>
    <fullName>PhysicalGeolocation__c</fullName>
    <description>geo location coordinates for physical address of individual. Value would be retrieved from Google address API</description>
    <label>Physical Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>