force-app/main/default/objects/SSP_Member__c/fields/PhysicalMailAddrDeliveryCode__c.field-meta.xml
<CustomField>
    <fullName>PhysicalMailAddrDeliveryCode__c</fullName>
    <description>Used to store the cot_mail_delivery_code value in Address Verification Service for Physical Address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Physical Mail Delivery Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>