force-app/main/default/objects/SSP_Member__c/fields/PhysicalResidentialDeliveryIndicator__c.field-meta.xml
<CustomField>
    <fullName>PhysicalResidentialDeliveryIndicator__c</fullName>
    <description>Used to store the cass_rdi_ind value in Address Verification Service for Physical Address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Physical Delivery Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>