force-app/main/default/objects/SSP_Member__c/fields/PhysicalZipCode4__c.field-meta.xml
<CustomField>
    <fullName>PhysicalZipCode4__c</fullName>
    <description>This field is used to store 4 digit Physical Zip code</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Zip Code (Four Digit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>