force-app/main/default/objects/SSP_Member__c/fields/PhysicalZipCode5__c.field-meta.xml
<CustomField>
    <fullName>PhysicalZipCode5__c</fullName>
    <description>This field is used to store 5 digit Physical Zip code</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Zip Code (Five Digit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>