force-app/main/default/objects/SSP_Member__c/fields/POC_RichText__c.field-meta.xml
<CustomField>
    <fullName>POC_RichText__c</fullName>
    <description>Do not check in only used for POC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>POC_RichText</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>