force-app/main/default/objects/SSP_Member__c/fields/PreferredDCBSOffice__c.field-meta.xml
<CustomField>
    <fullName>PreferredDCBSOffice__c</fullName>
    <description>Field to capture DCBSPOffice</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PreferredDCBSOffice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>