force-app/main/default/objects/SSP_Member__c/fields/PreferredIssuanceMethod__c.field-meta.xml
<CustomField>
    <fullName>PreferredIssuanceMethod__c</fullName>
    <description>This field is used to store Preferred method of payment</description>
    <label>Preferred Method of Payment</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PreferredIssuanceMethod</valueSetName>
        
        </valueSet>
</CustomField>