force-app/main/default/objects/SSP_Member__c/fields/PreferredMCOId__c.field-meta.xml
<CustomField>
    <fullName>PreferredMCOId__c</fullName>
    <description>It is used to store MCO Plan Id selected on Preferred MCO Selection Screen</description>
    <label>Preferred MCO Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>