force-app/main/default/objects/SSP_Member__c/fields/PreferredMCOName__c.field-meta.xml
<CustomField>
    <fullName>PreferredMCOName__c</fullName>
    <description>It is used to store MCO Plan Name selected on Preferred MCO Selection Screen</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred MCO Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>