force-app/main/default/objects/SSP_Member__c/fields/PreferredNotificationMethodCode__c.field-meta.xml
<CustomField>
    <fullName>PreferredNotificationMethodCode__c</fullName>
    <description>This field is used to store Preferred Notification method for communication</description>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PreferredNotification</valueSetName>
        
        </valueSet>
</CustomField>