force-app/main/default/objects/SSP_Member__c/fields/PreferredNotificationMethodForTaxCode__c.field-meta.xml
<CustomField>
    <fullName>PreferredNotificationMethodForTaxCode__c</fullName>
    <description>This field is used to store Preferred Tax Notification method for communication</description>
    <label>PreferredNotificationMethodForTaxCode</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PreferredNotification</valueSetName>
        
        </valueSet>
</CustomField>