force-app/main/default/objects/SSP_Member__c/fields/PreferredSpokenLanguageCode__c.field-meta.xml
<CustomField>
    <fullName>PreferredSpokenLanguageCode__c</fullName>
    <description>This field is used to store preferred spoken language for a member</description>
    <label>Preferred Spoken Language</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SpokenLanguage</valueSetName>
        
        </valueSet>
</CustomField>