force-app/main/default/objects/SSP_Member__c/fields/PreferredWrittenLanguageCode__c.field-meta.xml
<CustomField>
    <fullName>PreferredWrittenLanguageCode__c</fullName>
    <description>This field is used to store Preferred written language of a member</description>
    <label>Preferred Written Language</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPWrittenLanguage</valueSetName>
        
        </valueSet>
</CustomField>