force-app/main/default/objects/SSP_Member__c/fields/PregnancyDueDate__c.field-meta.xml
<CustomField>
    <fullName>PregnancyDueDate__c</fullName>
    <description>This field is used to store pregnancy due date for a member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pregnancy Due Date</label>
    <type>Date</type>
</CustomField>