force-app/main/default/objects/SSP_Member__c/fields/PregnancyTerminationDate__c.field-meta.xml
<CustomField>
    <fullName>PregnancyTerminationDate__c</fullName>
    <description>This field is used to store pregnancy termination date for a member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pregnancy Termination Date</label>
    <type>Date</type>
</CustomField>