force-app/main/default/objects/SSP_Member__c/fields/PrimaryPhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPhoneExtension__c</fullName>
    <description>This field is used to store primary phone extension of a member</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Primary Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>