force-app/main/default/objects/SSP_Member__c/fields/PrimaryPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPhoneNumber__c</fullName>
    <description>This field is used to store primary phone number of a member</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Primary Phone Number</label>
    <type>Phone</type>
</CustomField>