force-app/main/default/objects/SSP_Member__c/fields/PrimaryPhoneTypeCode__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPhoneTypeCode__c</fullName>
    <description>This field is used to store phone type code to determine contact method to be used for communication</description>
    <label>Primary Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PhoneTypeCode</valueSetName>
        
        </valueSet>
</CustomField>