force-app/main/default/objects/SSP_Member__c/fields/PrisonerConfinementDate__c.field-meta.xml
<CustomField>
    <fullName>PrisonerConfinementDate__c</fullName>
    <description>PrisonerConfinementDate detail   in SSN Interface Callout  will store</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PrisonerConfinementDate</label>
    <type>Date</type>
</CustomField>