force-app/main/default/objects/SSP_Member__c/fields/ProviderId__c.field-meta.xml
<CustomField>
    <fullName>ProviderId__c</fullName>
    <description>This field is used to store data when provider details are coming from partner portal</description>
    <label>Provider Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>