force-app/main/default/objects/SSP_Member__c/fields/ProviderName__c.field-meta.xml
<CustomField>
    <fullName>ProviderName__c</fullName>
    <description>This field is used to store data when provider details are coming from partner portal</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>