force-app/main/default/objects/SSP_Member__c/fields/PseudoSSN__c.field-meta.xml
<CustomField>
    <fullName>PseudoSSN__c</fullName>
    <description>This field is populated from MCI merged service as part of IEES Call and will need in SSP-DC call.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>PseudoSSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>