force-app/main/default/objects/SSP_Member__c/fields/RaceCode__c.field-meta.xml
<CustomField>
    <fullName>RaceCode__c</fullName>
    <description>This field is used to store Race Code for the Member</description>
    <label>Your Race(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Race</valueSetName>
        
        </valueSet>
</CustomField>