force-app/main/default/objects/SSP_Member__c/fields/ReceiptNumber__c.field-meta.xml
<CustomField>
    <fullName>ReceiptNumber__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Receipt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>