force-app/main/default/objects/SSP_Member__c/fields/ReceiveInHouseAssistanceToggle__c.field-meta.xml
<CustomField>
    <fullName>ReceiveInHouseAssistanceToggle__c</fullName>
    <description>This field is used to store if individual receives in house assistance</description>
    <label>Receive House assistance?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>