force-app/main/default/objects/SSP_Member__c/fields/ReceivesEntitledIncomeToggle__c.field-meta.xml
<CustomField>
    <fullName>ReceivesEntitledIncomeToggle__c</fullName>
    <description>This field is used to store if individual has receives entitled income</description>
    <label>Receive entitle Income?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>