force-app/main/default/objects/SSP_Member__c/fields/ReceivesSSIBenefitsToggle__c.field-meta.xml
<CustomField>
    <fullName>ReceivesSSIBenefitsToggle__c</fullName>
    <description>This field is used to store if individual receives SSI benefits</description>
    <label>Receive SSI Benefits?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>