force-app/main/default/objects/SSP_Member__c/fields/RecoveryDate__c.field-meta.xml
<CustomField>
    <fullName>RecoveryDate__c</fullName>
    <description>This field is used to store expected recovery date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected to Recover by</label>
    <type>Date</type>
</CustomField>