force-app/main/default/objects/SSP_Member__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>