force-app/main/default/objects/SSP_Member__c/fields/ReturnToWorkDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnToWorkDate__c</fullName>
    <description>This field is used to store the expected return to work date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected to return to Work by</label>
    <type>Date</type>
</CustomField>