force-app/main/default/objects/SSP_Member__c/fields/RoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>RoutingNumber__c</fullName>
    <description>This field is used to store Routing Number</description>
    <label>Routing Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>