force-app/main/default/objects/SSP_Member__c/fields/SameAddressInfoAsHOHToggle__c.field-meta.xml
<CustomField>
    <fullName>SameAddressInfoAsHOHToggle__c</fullName>
    <description>This field is used to store if individual has same address as that of HOH</description>
    <label>Same Address Information as HOH</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>