force-app/main/default/objects/SSP_Member__c/fields/SameAddressOfHoh__c.field-meta.xml
<CustomField>
    <fullName>SameAddressOfHoh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if the non primary applicant will have same address as HOH</description>
    <label>SameAddressOfHoh</label>
    <type>Checkbox</type>
</CustomField>