force-app/main/default/objects/SSP_Member__c/fields/SameContactInfoAsHOH__c.field-meta.xml
<CustomField>
    <fullName>SameContactInfoAsHOH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether member has same contact information as HOH</description>
    <label>Same Contact Information as HOH</label>
    <type>Checkbox</type>
</CustomField>