force-app/main/default/objects/SSP_Member__c/fields/SecondaryPhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>SecondaryPhoneExtension__c</fullName>
    <description>This field is used to store secondary phone extension of a member</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Secondary Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>